Update translation - 104816611 (#3822) 9c5814cec6955e82bc95c097b666ceb9eff35bfe

--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;3:07 م الساعة 22 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:21 م الساعة 22 مارس 2021</p>
           
         </div>
       </div>
@@ -281,13 +281,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-VACCINE-DATA">بيانات لقاح كوفيد-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-VACCINE-DATA">بيانات لقاح كوفيد-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
             <p>تحققت إدارة الصحة العامة بكاليفورنيا من ثبوتها.</p>
-<figure class="wp-block-table  table tools"><table><tbody><tr><td><strong>متغير</strong></td><td><strong>تنسيق</strong></td><td><strong>وصف</strong></td><td><strong>تكرار التحديث</strong></td></tr><tr><td>الجرعات الموزعة والمعطاة</td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 التي تم إعطاؤها وإبلاغها إلى سجل التحصين بكاليفورنيا (CAIR2)، وسجل المستقبل الصحي، وسجل التحصين بسان دييغو.</td><td>يوميًا</td></tr><tr><td>النسبة المئوية للجرعات <br>الموزعة والمعطاة</td><td>رقمي</td><td>النسبة المئوية لإجمالي الجرعات الموزعة والمعطاة</td><td>يوميًا</td></tr><tr><td>متوسط الجرعات في اليوم  </td><td>رقمي</td><td>يمثل متوسط عدد جرعات اللقاحات المبلغ عنها يوميًا. ومتوسط الجرعات المتداولة في 7 أيام قبل 3 إلى 10 أيام.</td><td>يوميًا</td></tr><tr><td>الأشخاص الذين تم تلقيحهم جزئيًّا</td><td>رقمي</td><td>عدد الأفراد الذين تلقوا على الأقل جرعة واحدة من لقاح Pfizer/فايزر أو مودرنا/Moderna.</td><td>يوميًا</td></tr><tr><td>النسبة المئوية للأشخاص الذين تم <br>تلقيحهم جزئيًّا</td><td>رقمي</td><td>النسبة المئوية للسكان البالغين من العمر ≥ 16 عامًا.</td><td>يوميًا</td></tr><tr><td>الأشخاص الذين تم تلقيحهم بالكامل</td><td>رقمي</td><td>عدد الأفراد الذين تلقوا جرعتين من لقاح Pfizer/فايزر أو مودرنا/Moderna أو جرعة لقاح يانسن/Janssen.</td><td>يوميًا</td></tr><tr><td>الأشخاص الذين تم <br>تلقيحهم بالكامل</td><td>رقمي</td><td>النسبة المئوية للسكان البالغين من العمر ≥ 16 عامًا.</td><td>يوميًا</td></tr><tr><td>المخزون المتوفر من جرعات اللقاح</td><td>رقمي</td><td>عدد الجرعات<br>المتوفرة من مخزون اللقاح.<br></td><td>يوميًا</td></tr><tr><td>أيام<br>الجرد<br></td><td>رقمي</td><td>أيام الجرد = عدد الجرعات<br>المتوفرة / 7 أيام من المتوسط المتداول</td><td>يوميًا</td></tr><tr><td>الجرعات التي تسليمها</td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 المسلمة. فهي تشمل المخصصات الفيدرالية المباشرة وبرامج الشراكة الفيدرالية للصيدليات ولكنها لا تشمل الجرعات التي يتم تسليمها إلى الكيانات الفيدرالية التالية: دائرة الصحة الهندية، ووزارة الدفاع، ومكتب السجون الفيدرالي الأميركي، وشؤون المحاربين القدامى. </td><td>يوميًا</td></tr><tr><td><br>مركز مكافحة الأمراض والوقاية منها<br>الجرعات التي سلمتها الصيدليات<br></td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 التي تم تسليمها لبرنامج شراكة الصيدليات من مركز مكافحة الأمراض والوقاية منها من أجل مرافق الرعاية طويلة الأجل (LTCF) والبرنامج الفيدرالي لصيدليات البيع بالتجزئة.</td><td>يوميًا</td></tr><tr><td>الجرعات الموزعة<br>بحسب مقاطعة الإقامة</td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 التي توزعها مقاطعة إقامة متلقي اللقاح. وفي حال عدم الإبلاغ عن مقاطعة الإقامة، يتم استخدام المقاطعة التي تم تطعيم الشخص فيها.</td><td>يوميًا</td></tr><tr><td>أرباع مؤشر الأماكن الصحية</td><td>سلسلة/شريحة</td><td>تستند النتيجة إلى مؤشر الأماكن الصحية الذي يقيس مستويات صحة المجتمع، بدءًا من أقل الظروف الصحية للمجتمع (الربع رقم 1) وانتهاء إلى معظم الظروف الصحية للمجتمع (الربع رقم 4).</td><td>نادرًا</td></tr><tr><td>VACCINATED_<br>RACE_<br>ETHNICITY</td><td>سلسلة/شريحة</td><td>فئات العرق والجنس للأشخاص الذين تم تطعيمهم.  </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>RACE_<br>ETHNICITY</td><td>غير ثابتة</td><td>النسبة المئوية للأشخاص الذين تم تطعيمهم ضمن جنس معين وفئة عرقية محددة. </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>AGE_GROUP</td><td>سلسلة/شريحة</td><td>فئات العمر للأشخاص الذين تم تطعيمهم. </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>AGE_<br>PERCENTAGE</td><td>غير ثابتة</td><td>النسبة المئوية للأشخاص الذين تم تطعيمهم ضمن فئة عمرية محددة.</td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>GENDER</td><td>سلسلة/شريحة</td><td>جنس الأشخاص الذين تم تلقيحهم. </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>AGE_<br>PERCENTAGE</td><td>غير ثابتة</td><td>النسبة المئوية للأشخاص الذين تم تطعيمهم ضمن فئة جنسية محددة.</td><td>يوميًا</td></tr><tr><td> سلطات الصحة المحلية/الكيانات متعددة المقاطعات/مرافق الرعاية طويلة الأجل</td><td>سلسلة/شريحة</td><td>دائرة اختصاص مقدم اللقاح</td><td>يوميًا</td></tr><tr><td>النوع</td><td>سلسلة/شريحة</td><td>نوع مقدم الخدمة، إما كيان متعدد المقاطعات (MCE)، أو دائرة صحة محلية (LHJ)، أو شراكة بين صيدلية ومرفق رعاية طويلة الأجل (LTCF)</td><td>يوميًا</td></tr><tr><td>اسم المنظمة</td><td>سلسلة/شريحة</td><td>اسم مقدم اللقاح</td><td>يوميًا</td></tr><tr><td>المخزون المتوفر من جرعات اللقاح</td><td>رقمي</td><td>هذه بيانات يومية لجرد المخزون يتم الإبلاغ عنها ذاتيًا إلى VaccineFinder تدار على المستوى الفيدرالي من خلال مركز مكافحة الأمراض والوقاية منها. وتُسحب البيانات كل يوم في الساعة السادسة صباحاً من عملية Operation Warp Speed Tiberius</td><td>يوميًا</td></tr><tr><td>آخر <br>تاريخ للإبلاغ</td><td>رقمي</td><td></td><td>يوميًا</td></tr></tbody></table></figure>
+<figure class="wp-block-table  table tools"><table><tbody><tr><td><strong>متغير</strong></td><td><strong>تنسيق</strong></td><td><strong>وصف</strong></td><td><strong>تكرار التحديث</strong></td></tr><tr><td>الجرعات الموزعة والمعطاة</td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 التي تم إعطاؤها وإبلاغها إلى سجل التحصين بكاليفورنيا (CAIR2)، وسجل المستقبل الصحي، وسجل التحصين بسان دييغو.</td><td>يوميًا</td></tr><tr><td>النسبة المئوية للجرعات <br>الموزعة والمعطاة</td><td>رقمي</td><td>النسبة المئوية لإجمالي الجرعات الموزعة والمعطاة</td><td>يوميًا</td></tr><tr><td>متوسط الجرعات في اليوم  </td><td>رقمي</td><td>يمثل متوسط عدد جرعات اللقاحات المبلغ عنها يوميًا. ومتوسط الجرعات المتداولة في 7 أيام قبل 3 إلى 10 أيام.</td><td>يوميًا</td></tr><tr><td>الأشخاص الذين تم تلقيحهم جزئيًّا</td><td>رقمي</td><td>عدد الأفراد الذين تلقوا على الأقل جرعة واحدة من لقاح Pfizer/فايزر أو مودرنا/Moderna.</td><td>يوميًا</td></tr><tr><td>النسبة المئوية للأشخاص الذين تم <br>تلقيحهم جزئيًّا</td><td>رقمي</td><td>النسبة المئوية للسكان البالغين من العمر ≥ 16 عامًا.</td><td>يوميًا</td></tr><tr><td>الأشخاص الذين تم تلقيحهم بالكامل</td><td>رقمي</td><td>عدد الأفراد الذين تلقوا جرعتين من لقاح Pfizer/فايزر أو مودرنا/Moderna أو جرعة لقاح يانسن/Janssen.</td><td>يوميًا</td></tr><tr><td>الأشخاص الذين تم <br>تلقيحهم بالكامل</td><td>رقمي</td><td>النسبة المئوية للسكان البالغين من العمر ≥ 16 عامًا.</td><td>يوميًا</td></tr><tr><td>المخزون المتوفر من جرعات اللقاح</td><td>رقمي</td><td>عدد الجرعات<br>المتوفرة من مخزون اللقاح.<br></td><td>يوميًا</td></tr><tr><td>أيام<br>الجرد<br></td><td>رقمي</td><td>أيام الجرد = عدد الجرعات<br>المتوفرة / 7 أيام من المتوسط المتداول</td><td>يوميًا</td></tr><tr><td>الجرعات التي تسليمها</td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 المسلمة. فهي تشمل المخصصات الفيدرالية المباشرة وبرامج الشراكة الفيدرالية للصيدليات ولكنها لا تشمل الجرعات التي يتم تسليمها إلى الكيانات الفيدرالية التالية: دائرة الصحة الهندية، ووزارة الدفاع، ومكتب السجون الفيدرالي الأميركي، وشؤون المحاربين القدامى. </td><td>يوميًا</td></tr><tr><td><br>مركز مكافحة الأمراض والوقاية منها<br>الجرعات التي سلمتها الصيدليات<br></td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 التي تم تسليمها لبرنامج شراكة الصيدليات من مركز مكافحة الأمراض والوقاية منها من أجل مرافق الرعاية طويلة الأجل (LTCF) والبرنامج الفيدرالي لصيدليات البيع بالتجزئة.</td><td>يوميًا</td></tr><tr><td>الجرعات الموزعة<br>بحسب مقاطعة الإقامة</td><td>رقمي</td><td>عدد جرعات لقاح كوفيد-19 التي توزعها مقاطعة إقامة متلقي اللقاح. وفي حال عدم الإبلاغ عن مقاطعة الإقامة، يتم استخدام المقاطعة التي تم تطعيم الشخص فيها.</td><td>يوميًا</td></tr><tr><td>أرباع مؤشر الأماكن الصحية</td><td>سلسلة/شريحة</td><td>تستند النتيجة إلى مؤشر الأماكن الصحية الذي يقيس مستويات صحة المجتمع، بدءًا من أقل الظروف الصحية للمجتمع (الربع رقم 1) وانتهاء إلى معظم الظروف الصحية للمجتمع (الربع رقم 4).</td><td>نادرًا</td></tr><tr><td>VACCINATED_<br>RACE_<br>ETHNICITY</td><td>سلسلة/شريحة</td><td>فئات العرق والجنس للأشخاص الذين تم تطعيمهم.  </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>RACE_<br>ETHNICITY</td><td>غير ثابتة</td><td>النسبة المئوية للأشخاص الذين تم تطعيمهم ضمن جنس معين وفئة عرقية محددة. </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>AGE_GROUP</td><td>سلسلة/شريحة</td><td>فئات العمر للأشخاص الذين تم تطعيمهم. </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>AGE_<br>PERCENTAGE</td><td>غير ثابتة</td><td>النسبة المئوية للأشخاص الذين تم تطعيمهم ضمن فئة عمرية محددة.</td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>GENDER</td><td>سلسلة/شريحة</td><td>جنس الأشخاص الذين تم تلقيحهم. </td><td>يوميًا</td></tr><tr><td>VACCINATED_<br>AGE_<br>PERCENTAGE</td><td>غير ثابتة</td><td>النسبة المئوية للأشخاص الذين تم تطعيمهم ضمن فئة جنسية محددة.</td><td>يوميًا</td></tr><tr><td>سلطات الصحة المحلية/الكيانات متعددة المقاطعات/مرافق الرعاية طويلة الأجل</td><td>سلسلة/شريحة</td><td>دائرة اختصاص مقدم اللقاح</td><td>يوميًا</td></tr><tr><td>النوع</td><td>سلسلة/شريحة</td><td>نوع مقدم الخدمة، إما كيان متعدد المقاطعات (MCE)، أو دائرة صحة محلية (LHJ)، أو شراكة بين صيدلية ومرفق رعاية طويلة الأجل (LTCF)</td><td>يوميًا</td></tr><tr><td>اسم المنظمة</td><td>سلسلة/شريحة</td><td>اسم مقدم اللقاح</td><td>يوميًا</td></tr><tr><td>المخزون المتوفر من جرعات اللقاح</td><td>رقمي</td><td>هذه بيانات يومية لجرد المخزون يتم الإبلاغ عنها ذاتيًا إلى VaccineFinder تدار على المستوى الفيدرالي من خلال مركز مكافحة الأمراض والوقاية منها. وتُسحب البيانات كل يوم في الساعة السادسة صباحاً من عملية Operation Warp Speed Tiberius</td><td>يوميًا</td></tr><tr><td>آخر <br>تاريخ للإبلاغ</td><td>رقمي</td><td></td><td>يوميًا</td></tr></tbody></table></figure>
 
                   </div>
                 </div>
@@ -309,7 +309,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-CASES-DATA">بيانات حالات كوفيد-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-CASES-DATA">بيانات حالات كوفيد-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -337,7 +337,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOSPITALS-DATA">بيانات المستشفيات</h4>
+            <h4 class=" js-qa-exclude" id="HOSPITALS-DATA">بيانات المستشفيات</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -365,7 +365,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LOGISTICS-DATA">البيانات اللوجستية</h4>
+            <h4 class=" js-qa-exclude" id="LOGISTICS-DATA">البيانات اللوجستية</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -421,12 +421,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">ديموغرافية الحالات/الجنس والحالة العرقية</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">ديموغرافية الحالات/الجنس والحالة العرقية</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <figure class="wp-block-table  table tools"><table><tbody><tr><td><strong>متغير</strong></td><td><strong>تنسيق</strong></td><td><strong>وصف</strong></td><td><strong>تكرار التحديث</strong></td></tr><tr><td>الجنس_العرق</td><td>سلسلة/شريحة</td><td>فئات الجنسية والعرقية لحالات كوفيد-19 والوفيات كما أبلغت عنها إدارات الصحة المحلية.  </td><td>يوميًا</td></tr><tr><td>النسبة المئوية للحالات</td><td>غير ثابتة</td><td>النسبة المئوية لحالات الإصابة بكوفيد-19 ضمن جنس معين وفئة عرقية محددة. </td><td>يوميًا</td></tr><tr><td>النسبة المئوية للوفيات</td><td>غير ثابتة</td><td>النسبة المئوية للوفيات المتعلقة بكوفيد-19 ضمن جنس معين وفئة عرقية محددة.</td><td>يوميًا</td></tr><tr><td>النسبة المئوية<br>للسكان</td><td>غير ثابتة</td><td>نسبة سكان الولاية ضمن فئة عرقية وإثنية محددة. </td><td>يوميًا</td></tr></tbody></table></figure>
+            <figure class="wp-block-table  table tools"><table><tbody><tr><td><strong>متغير</strong></td><td><strong>تنسيق</strong></td><td><strong>وصف</strong></td><td><strong>تكرار التحديث</strong></td></tr><tr><td>الجنس_العرق</td><td>سلسلة/شريحة</td><td>فئات الجنسية والعرقية لحالات كوفيد-19 والوفيات كما أبلغت عنها إدارات الصحة المحلية.  </td><td>يوميًا</td></tr><tr><td>النسبة المئوية للحالات</td><td>غير ثابتة</td><td>النسبة المئوية لحالات الإصابة بكوفيد-19 ضمن جنس معين وفئة عرقية محددة. </td><td>يوميًا</td></tr><tr><td>النسبة المئوية_للوفيات</td><td>غير ثابتة</td><td>النسبة المئوية للوفيات المتعلقة بكوفيد-19 ضمن جنس معين وفئة عرقية محددة.</td><td>يوميًا</td></tr><tr><td>النسبة المئوية_<br>لسكان_كاليفورنيا</td><td>غير ثابتة</td><td>نسبة سكان الولاية ضمن فئة عرقية وإثنية محددة. </td><td>يوميًا</td></tr></tbody></table></figure>
 
                   </div>
                 </div>
@@ -444,7 +444,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-SEX">ديموغرافية الحالات/الجنس</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-SEX">ديموغرافية الحالات/الجنس</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -467,7 +467,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-AGE">ديموغرافية الحالات/العمر</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-AGE">ديموغرافية الحالات/العمر</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -490,7 +490,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOMELESS-IMPACT">تأثير المشردين</h4>
+            <h4 class=" js-qa-exclude" id="HOMELESS-IMPACT">تأثير المشردين</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -513,7 +513,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="BED-SURGE">اكتظاظ الأسرة</h4>
+            <h4 class=" js-qa-exclude" id="BED-SURGE">اكتظاظ الأسرة</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
