--- a/vi/data-and-tools/index.html
+++ b/vi/data-and-tools/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Dữ liệu và công cụ</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 15:07</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 15:21</p>
           
         </div>
       </div>
@@ -283,7 +283,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-VACCINE-DATA">DỮ LIỆU VỀ VẮC-XIN COVID-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-VACCINE-DATA">DỮ LIỆU VỀ VẮC-XIN COVID-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -311,7 +311,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-CASES-DATA">DỮ LIỆU VỀ SỐ CA MẮC COVID-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-CASES-DATA">DỮ LIỆU VỀ SỐ CA MẮC COVID-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -339,7 +339,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOSPITALS-DATA">DỮ LIỆU CỦA BỆNH VIỆN</h4>
+            <h4 class=" js-qa-exclude" id="HOSPITALS-DATA">DỮ LIỆU CỦA BỆNH VIỆN</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -367,7 +367,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LOGISTICS-DATA">DỮ LIỆU KHO VẬN</h4>
+            <h4 class=" js-qa-exclude" id="LOGISTICS-DATA">DỮ LIỆU KHO VẬN</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -423,7 +423,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">CHỦNG TỘC VÀ SẮC TỘC THEO DỮ LIỆU NHÂN KHẨU HỌC CỦA CA MẮC</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">CHỦNG TỘC VÀ SẮC TỘC THEO DỮ LIỆU NHÂN KHẨU HỌC CỦA CA MẮC</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -446,7 +446,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-SEX">GIỚI TÍNH THEO DỮ LIỆU NHÂN KHẨU HỌC CỦA CA BỆNH</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-SEX">GIỚI TÍNH THEO DỮ LIỆU NHÂN KHẨU HỌC CỦA CA BỆNH</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -469,7 +469,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-AGE">TUỔI TÁC THEO DỮ LIỆU NHÂN KHẨU HỌC CỦA CA BỆNH</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-AGE">TUỔI TÁC THEO DỮ LIỆU NHÂN KHẨU HỌC CỦA CA BỆNH</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -492,7 +492,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOMELESS-IMPACT">TÁC ĐỘNG TỪ TÌNH TRẠNG VÔ GIA CƯ</h4>
+            <h4 class=" js-qa-exclude" id="HOMELESS-IMPACT">TÁC ĐỘNG TỪ TÌNH TRẠNG VÔ GIA CƯ</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -515,7 +515,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="BED-SURGE">NHU CẦU VỀ GIƯỜNG BỆNH TĂNG CAO ĐỘT NGỘT</h4>
+            <h4 class=" js-qa-exclude" id="BED-SURGE">NHU CẦU VỀ GIƯỜNG BỆNH TĂNG CAO ĐỘT NGỘT</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
