--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Última actualización&nbsp;22 de marzo de 2021 a las 3:07 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;22 de marzo de 2021 a las 3:21 p. m.</p>
           
         </div>
       </div>
@@ -281,7 +281,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-VACCINE-DATA">DATOS DE LA VACUNA CONTRA LA COVID-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-VACCINE-DATA">DATOS DE LA VACUNA CONTRA LA COVID-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -309,7 +309,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-CASES-DATA">DATOS DE CASOS DE COVID-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-CASES-DATA">DATOS DE CASOS DE COVID-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -337,7 +337,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOSPITALS-DATA">DATOS DE HOSPITALES</h4>
+            <h4 class=" js-qa-exclude" id="HOSPITALS-DATA">DATOS DE HOSPITALES</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -365,7 +365,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LOGISTICS-DATA">DATOS LOGÍSTICOS</h4>
+            <h4 class=" js-qa-exclude" id="LOGISTICS-DATA">DATOS LOGÍSTICOS</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -421,7 +421,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">CASOS POR ETNIA Y RAZA</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">CASOS POR ETNIA Y RAZA</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -444,7 +444,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-SEX">CASOS POR SEXO</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-SEX">CASOS POR SEXO</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -467,7 +467,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-AGE">CASOS POR EDAD</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-AGE">CASOS POR EDAD</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -490,7 +490,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOMELESS-IMPACT">IMPACTO EN LAS PERSONAS SIN HOGAR</h4>
+            <h4 class=" js-qa-exclude" id="HOMELESS-IMPACT">IMPACTO EN LAS PERSONAS SIN HOGAR</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -513,7 +513,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="BED-SURGE">AUMENTO EN EL NÚMERO DE CAMAS</h4>
+            <h4 class=" js-qa-exclude" id="BED-SURGE">AUMENTO EN EL NÚMERO DE CAMAS</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
