--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 22, 2021 sa 3:07 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 22, 2021 sa 3:21 PM</p>
           
         </div>
       </div>
@@ -281,7 +281,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-VACCINE-DATA">DATOS NG BAKUNA LABAN SA COVID-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-VACCINE-DATA">DATOS NG BAKUNA LABAN SA COVID-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -309,7 +309,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-CASES-DATA">DATOS NG MGA KASO NG COVID-19</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-CASES-DATA">DATOS NG MGA KASO NG COVID-19</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -337,7 +337,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOSPITALS-DATA">DATOS NG MGA OSPITAL</h4>
+            <h4 class=" js-qa-exclude" id="HOSPITALS-DATA">DATOS NG MGA OSPITAL</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -365,7 +365,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LOGISTICS-DATA">DATOS NG LOGISTICS</h4>
+            <h4 class=" js-qa-exclude" id="LOGISTICS-DATA">DATOS NG LOGISTICS</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -421,7 +421,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">LAHI AT ETNISIDAD NG MGA DEMOGRAPIKO NG KASO</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">LAHI AT ETNISIDAD NG MGA DEMOGRAPIKO NG KASO</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -444,7 +444,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-SEX">KASARIAN NG MGA DEMOGRAPIKO NG KASO</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-SEX">KASARIAN NG MGA DEMOGRAPIKO NG KASO</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -467,7 +467,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-AGE">EDAD NG MGA DEMOGRAPIKO NG KASO</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-AGE">EDAD NG MGA DEMOGRAPIKO NG KASO</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -490,7 +490,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOMELESS-IMPACT">EPEKTO NG KAWALAN NG TIRAHAN</h4>
+            <h4 class=" js-qa-exclude" id="HOMELESS-IMPACT">EPEKTO NG KAWALAN NG TIRAHAN</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -513,7 +513,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="BED-SURGE">PAGTAAS NG BILANG NG MGA NANGANGAILANGAN NG KAMA</h4>
+            <h4 class=" js-qa-exclude" id="BED-SURGE">PAGTAAS NG BILANG NG MGA NANGANGAILANGAN NG KAMA</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
