--- a/zh-hans/data-and-tools/index.html
+++ b/zh-hans/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>数据及工具</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月22日, 下午3:07</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月22日, 下午3:21</p>
           
         </div>
       </div>
@@ -281,13 +281,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-VACCINE-DATA">COVID-19疫苗数据</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-VACCINE-DATA">COVID-19疫苗数据</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
             <p>经加州公共卫生局 (California Department of Public Health) 核证。</p>
-<figure class="wp-block-table  table tools"><table><tbody><tr><td><strong>变量</strong></td><td><strong>格式</strong></td><td><strong>描述</strong></td><td><strong>更新频率</strong></td></tr><tr><td>已接种剂量数</td><td>数值</td><td>已接种的COVID-19疫苗剂量数及呈报给加州免疫登记处 (California Immunization Registry, CAIR2) 、健康未来登记处 (Healthy Futures Registry) 以及San Diego免疫登记处的疫苗剂量数。</td><td>每日</td></tr><tr><td>已接种<br>剂量数百分比</td><td>数值</td><td>已接种剂量总数的百分比。</td><td>每日</td></tr><tr><td>每日平均剂量数  </td><td>数值</td><td>代表每日呈报疫苗剂量数的平均值。3-10天前接种的剂量的7天滚动平均数。</td><td>每日</td></tr><tr><td>未完全接种疫苗的人数</td><td>数值</td><td>至少已接种一剂Pfizer或Moderna疫苗的人数。</td><td>每日</td></tr><tr><td>未完全接种疫苗<br>人数的百分比</td><td>数值</td><td>≥16岁群体的百分比。</td><td>每日</td></tr><tr><td>已完全接种疫苗的人数</td><td>数值</td><td>已接种两剂Pfizer或Moderna疫苗，或一剂Janssen疫苗的人数。</td><td>每日</td></tr><tr><td>已完全接种疫苗<br>人数的百分比</td><td>数值</td><td>≥16岁群体的百分比。</td><td>每日</td></tr><tr><td>目前持有的剂量数</td><td>数值</td><td>目前持有的<br>剂量数<br></td><td>每日</td></tr><tr><td>库存<br>天数<br></td><td>数值</td><td>库存天数 = <br>目前持有的剂量数/7天滚动接种剂量的平均数</td><td>每日</td></tr><tr><td>已交付剂量数</td><td>数值</td><td>已交付的COVID-19疫苗剂量数。包括直接联邦分配剂量数以及交付至联邦药房合作伙伴计划 (federal Pharmacy Partnership Programs) 的剂量数，但不包括交付至以下联邦单位的剂量数：印第安保健服务所 (Indian Health Service)、国防部 (Department of Defense,)、美国联邦监狱管理局 (U.S. Federal Bureau of Prisons)，以及退伍军人事务部 (Veterans Affairs)。 </td><td>每日</td></tr><tr><td>CDC<br>已交付的<br>药房剂量数<br></td><td>数值</td><td>向CDC长期护理机构 (Long-Term Care Facility, LTCF) 药房合作伙伴计划和联邦零售药房计划 (Federal Retail Pharmacy Program) 提供的COVID-19疫苗剂量数。</td><td>每日</td></tr><tr><td><br>所住县已接种疫苗剂量数</td><td>数值</td><td>疫苗接受者所住县已接种的COVID-19疫苗剂量数。如果所住县未呈报疫苗剂量数，则将采用接种时接种者所在县所呈报的剂量数。</td><td>每日</td></tr><tr><td>健康地方指数 (Healthy Places Index, HPI) 四分位数</td><td>字串</td><td>基于衡量社区健康水平的健康地方指数的得分，得分从社区状况最不健康（第1个四分位数）排至社区状况最健康（第4个四分位数）。</td><td>不常更新</td></tr><tr><td>已接种疫苗的_<br>种族_<br>族裔</td><td>字串</td><td>已接种人士的种族和族裔类别。  </td><td>每日</td></tr><tr><td>已接种疫苗的_<br>种族_族裔_<br>百分比</td><td>浮点数</td><td>在特定种族和族裔类别内已接种疫苗人数的百分比。 </td><td>每日</td></tr><tr><td>已接种疫苗的_<br>年龄_段</td><td>字串</td><td>已接种疫苗人士的年龄类别。 </td><td>每日</td></tr><tr><td>已接种的_<br>年龄段_<br>的百分比</td><td>浮点数</td><td>在特定年龄段内已接种疫苗人数的百分比。</td><td>每日</td></tr><tr><td>已接种疫苗的_<br>性别</td><td>字串</td><td>已接种疫苗人士的性别。 </td><td>每日</td></tr><tr><td>已接种疫苗人士的_<br>性别_<br>的百分比</td><td>浮点数</td><td>特定性别下已接种疫苗人数的百分比。</td><td>每日</td></tr><tr><td>MCE/LHJ/LTCF</td><td>字串</td><td>疫苗提供者的管辖权</td><td>每日</td></tr><tr><td>类型</td><td>字串</td><td>提供者类型：多县实体机构 (Multi County Entity, MCE) 、地方卫生辖区 (Local Health Jurisdictions, LHJ)，以及CDC长期护理机构 (Long-Term Care Facility, LTCF) </td><td>每日</td></tr><tr><td>组织名称</td><td>字串</td><td>疫苗提供者的名称</td><td>每日</td></tr><tr><td>目前持有的剂量数</td><td>数值</td><td>自我呈报给VaccineFinder的每日库存数据，由CDC按联邦级别管理。每天早上6点从Operation Warp Speed Tiberius中提取的数据</td><td>每日</td></tr><tr><td>最新呈报<br>日期</td><td>数值</td><td></td><td>每日</td></tr></tbody></table></figure>
+<figure class="wp-block-table  table tools"><table><tbody><tr><td><strong>变量</strong></td><td><strong>格式</strong></td><td><strong>描述</strong></td><td><strong>更新频率</strong></td></tr><tr><td>已接种剂量数</td><td>数值</td><td>已接种的COVID-19疫苗剂量数及呈报给加州免疫登记处 (California Immunization Registry, CAIR2) 、健康未来登记处 (Healthy Futures Registry) 以及San Diego免疫登记处的疫苗剂量数。</td><td>每日</td></tr><tr><td>已接种<br>剂量数百分比</td><td>数值</td><td>已接种剂量总数的百分比。</td><td>每日</td></tr><tr><td>每日平均剂量数  </td><td>数值</td><td>代表每日呈报疫苗剂量数的平均值。3-10天前接种的剂量的7天滚动平均数。</td><td>每日</td></tr><tr><td>未完全接种疫苗的人数</td><td>数值</td><td>至少已接种一剂Pfizer或Moderna疫苗的人数。</td><td>每日</td></tr><tr><td>未完全接种疫苗<br>人数的百分比</td><td>数值</td><td>≥16岁群体的百分比。</td><td>每日</td></tr><tr><td>已完全接种疫苗的人数</td><td>数值</td><td>已接种两剂Pfizer或Moderna疫苗，或一剂Janssen疫苗的人数。</td><td>每日</td></tr><tr><td>已完全接种疫苗<br>人数的百分比</td><td>数值</td><td>≥16岁群体的百分比。</td><td>每日</td></tr><tr><td>目前持有的剂量数</td><td>数值</td><td>目前持有的<br>剂量数<br></td><td>每日</td></tr><tr><td>库存<br>天数<br></td><td>数值</td><td>库存天数 = <br>目前持有的剂量数/7天滚动接种剂量的平均数</td><td>每日</td></tr><tr><td>已交付剂量数</td><td>数值</td><td>已交付的COVID-19疫苗剂量数。包括直接联邦分配剂量数以及交付至联邦药房合作伙伴计划 (federal Pharmacy Partnership Programs) 的剂量数，但不包括交付至以下联邦单位的剂量数：印第安保健服务所 (Indian Health Service)、国防部 (Department of Defense,)、美国联邦监狱管理局 (U.S. Federal Bureau of Prisons)，以及退伍军人事务部 (Veterans Affairs)。 </td><td>每日</td></tr><tr><td>CDC<br>已交付的<br>药房剂量数<br></td><td>数值</td><td>向CDC长期护理机构 (Long-Term Care Facility, LTCF) 药房合作伙伴计划和联邦零售药房计划 (Federal Retail Pharmacy Program) 提供的COVID-19疫苗剂量数。</td><td>每日</td></tr><tr><td><br>所住县已接种疫苗剂量数</td><td>数值</td><td>疫苗接受者所住县已接种的COVID-19疫苗剂量数。如果所住县未呈报疫苗剂量数，则将采用接种时接种者所在县所呈报的剂量数。</td><td>每日</td></tr><tr><td>健康地方指数 (Healthy Places Index, HPI) 四分位数</td><td>字串</td><td>基于衡量社区健康水平的健康地方指数的得分，得分从社区状况最不健康（第1个四分位数）排至社区状况最健康（第4个四分位数）。</td><td>不常更新</td></tr><tr><td>已接种疫苗的_<br>种族_<br>族裔</td><td>字串</td><td>已接种人士的种族和族裔类别。  </td><td>每日</td></tr><tr><td>已接种疫苗的_<br>种族_族裔_<br>百分比</td><td>浮点数</td><td>在特定种族和族裔类别内已接种疫苗人数的百分比。 </td><td>每日</td></tr><tr><td>已接种疫苗的_<br>年龄_段</td><td>字串</td><td>已接种疫苗人士的年龄类别。 </td><td>每日</td></tr><tr><td>已接种的_<br>年龄段_<br>的百分比</td><td>浮点数</td><td>在特定年龄段内已接种疫苗人数的百分比。</td><td>每日</td></tr><tr><td>已接种疫苗的_<br>性别</td><td>字串</td><td>已接种疫苗人士的性别。 </td><td>每日</td></tr><tr><td>已接种疫苗人士的_<br>性别_<br>的百分比</td><td>浮点数</td><td>特定性别下已接种疫苗人数的百分比。</td><td>每日</td></tr><tr><td>MCE/LHJ/LTCF</td><td>字串</td><td>疫苗提供者的管辖权</td><td>每日</td></tr><tr><td>类型</td><td>字串</td><td>提供者类型：多县实体机构 (Multi County Entity, MCE) 、地方卫生辖区 (Local Health Jurisdictions, LHJ)，以及CDC长期护理机构 (Long-Term Care Facility, LTCF)</td><td>每日</td></tr><tr><td>组织名称</td><td>字串</td><td>疫苗提供者的名称</td><td>每日</td></tr><tr><td>目前持有的剂量数</td><td>数值</td><td>自我呈报给VaccineFinder的每日库存数据，由CDC按联邦级别管理。每天早上6点从Operation Warp Speed Tiberius中提取的数据</td><td>每日</td></tr><tr><td>最新呈报<br>日期</td><td>数值</td><td></td><td>每日</td></tr></tbody></table></figure>
 
                   </div>
                 </div>
@@ -309,7 +309,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-CASES-DATA">COVID-19病例数据</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-CASES-DATA">COVID-19病例数据</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -337,7 +337,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOSPITALS-DATA">医院数据</h4>
+            <h4 class=" js-qa-exclude" id="HOSPITALS-DATA">医院数据</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -365,7 +365,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LOGISTICS-DATA">物流数据</h4>
+            <h4 class=" js-qa-exclude" id="LOGISTICS-DATA">物流数据</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -421,7 +421,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">病例 人口统计 种族 族裔</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">病例 人口统计 种族 族裔</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -444,7 +444,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-SEX">病例 人口统计 性别</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-SEX">病例 人口统计 性别</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -467,7 +467,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-AGE">病例 人口统计 年龄</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-AGE">病例 人口统计 年龄</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -490,7 +490,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOMELESS-IMPACT">对无家可归者的影响</h4>
+            <h4 class=" js-qa-exclude" id="HOMELESS-IMPACT">对无家可归者的影响</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -513,7 +513,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="BED-SURGE">床位需求激增</h4>
+            <h4 class=" js-qa-exclude" id="BED-SURGE">床位需求激增</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
