--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 16:06</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 16:12</p>
           
         </div>
       </div>
@@ -165,6 +165,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47676 -->March 22, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom today announced that General Fund revenues are running $14.3 billion above January’s revenue forecast, with receipts for February exceeding the month’s projections by $3.8 billion. Near...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-097.aspx" lang="en-US" hreflang="en-US" rel="external">My Turn COVID-19 Vaccine Scheduling System Now Available in 12 Languages</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--9a03636f1332bb8fc6d69cda27cade7d -->March 21, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) announced the state's online COVID-19 vaccine scheduling tool My Turn is offering services in a total of 12 languages, allowing more state residents to comfortably...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
