--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;March 15, 2021 at 12:25 PM</p>
+            <p class="small-text">Last updated&nbsp;March 22, 2021 at 5:46 PM</p>
           
         </div>
       </div>
@@ -237,7 +237,7 @@
 
 
 
-<h3 class="h2 mt-4" id="rshoqas">Regional Stay Home Order</h3>
+<h3 id="rshoqas">Regional Stay Home Order</h3>
 
 
 
@@ -366,7 +366,7 @@
 
 
 
-<h3 class="h2 mt-4">Hospital Surge Order</h3>
+<h3 id="hsoqas">Hospital Surge Order</h3>
 
 
 
@@ -416,7 +416,7 @@
 
 
 
-<h3 class="h2 mt-4" id="sho-qas">Stay Home Order</h3>
+<h3 id="sho-qas">Stay Home Order</h3>
 
 
 
@@ -504,7 +504,7 @@
 
 
 
-<h3 class="h2 mt-4" id="blueprint-qas">Blueprint for a Safer Economy</h3>
+<h3 id="blueprint-qas">Blueprint for a Safer Economy</h3>
 
 
 
@@ -643,7 +643,7 @@
 
 
 
-<h3 class="h2 mt-4" id="general-qas">General</h3>
+<h3 id="general-qas">General</h3>
 
 
 
@@ -767,7 +767,7 @@
 
 
 
-<h3 class="h2 mt-4" id="political">Protected activities</h3>
+<h3 id="political">Protected activities</h3>
 
 
 
@@ -1136,7 +1136,7 @@
 
 
 
-<h3 class="h2 mt-4" id="govservices">Government services</h3>
+<h3 id="govservices">Government services</h3>
 
 
 
