Update page - more-ways-to-help.html a1c171786f7a071fec76203c2c2981c25adc1e08

--- a/more-ways-to-help/index.html
+++ b/more-ways-to-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>More ways to help</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:31 PM</p>
+            <p class="small-text">Last updated&nbsp;March 22, 2021 at 6:54 PM</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<h2>Volunteer</h2>
+<h2 id="volunteer">Volunteer</h2>
 
 
 
@@ -169,7 +169,7 @@
 
 
 
-<h2>Check on the elderly</h2>
+<h2 id="check-on-the-elderly">Check on the elderly</h2>
 
 
 
@@ -177,7 +177,7 @@
 
 
 
-<h2>Donate medical supplies</h2>
+<h2 id="donate-medical-supplies">Donate medical supplies</h2>
 
 
 
@@ -185,7 +185,7 @@
 
 
 
-<h2>Offer technology solutions</h2>
+<h2 id="offer-technology-solutions">Offer technology solutions</h2>
 
 
 
