Update translation - 104888242 (#3830) 5fdc6565bde5939c27b4b1bcc74756c75d48a3fe

--- a/ar/vaccines/index.html
+++ b/ar/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اللقاحات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:05 م الساعة 19 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;7:24 ص الساعة 22 مارس 2021</p>
           
         </div>
       </div>
@@ -1014,7 +1014,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل المعالجون بالتدليك مؤهلون للمرحلة 1A؟</h4>
+            <h4>هل المعالجون بالتدليك مؤهلون للقاح كوفيد-19 بموجب المرحلة 1A؟</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1037,7 +1037,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل عمال النظافة مؤهلون للحصول على اللقاح؟</h4>
+            <h4>هل عمال النظافة مؤهلون الآن للحصول على لقاح كوفيد-19؟</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1351,7 +1351,7 @@
 <ul><li>الحمض النووي الريبوزي المرسال</li><li>والدهون</li><li>والأملاح</li><li>والسكريات</li><li>وعوامل مقاوِمة لتغير الأس الهيدروجيني </li></ul>
 <p>تساعد هذه العوامل في الحفاظ على استقرار الأس الهيدروجيني للمحلول. </p>
 <p>يتضمن لقاح جانسن Janssen المكونات التالية: </p>
-<ul><li>الحمض النووي المَأْشوب، فيروس غدي عاجز عن الاستنساخ والتكاثر من النوع 26 الذي يعبر عن البروزات البروتينية (Spike Protein) -وتسمى بروتين الحسكة- للـ SARS-CoV-2</li><li>وحمض الستريك أحادي الهيدرات</li><li>وسيترات الصوديوم ثنائي الهيدرات</li><li>والإيثانول</li><li>و2-هيدروكسي بروبيل- بيتا- سيكلودكسترين (HBCD)، بوليسوربات-80</li><li> وكلوريد الصوديوم</li></ul>
+<ul><li>الحمض النووي المَأْشوب، فيروس غدي عاجز عن الاستنساخ والتكاثر من النوع 26 الذي يعبر عن البروزات البروتينية (Spike Protein) -وتسمى بروتين الحسكة- للـ SARS-CoV-2</li><li>وحمض الستريك أحادي الهيدرات</li><li>وسيترات الصوديوم ثنائي الهيدرات</li><li>والإيثانول</li><li>و2-هيدروكسي بروبيل- بيتا- سيكلودكسترين (HBCD)، بوليسوربات-80</li><li>وكلوريد الصوديوم</li></ul>
 <p>لا تحتوي هذه اللقاحات على:</p>
 <ul><li>بيض</li><li>مواد حافظة</li><li>اللاتكس</li></ul>
 <p>لمعرفة المزيد عن مكونات لقاحات كوفيد-19 المصرح بها، راجع</p>
