--- a/ko/vaccines/index.html
+++ b/ko/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>백신 접종</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 19일 오후 12:05</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 22일 오전 7:24</p>
           
         </div>
       </div>
@@ -1014,7 +1014,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>마사지 치료사는 1A 단계에 대한 자격이 있습니까?</h4>
+            <h4>마사지 치료사는 1A 단계에 따른 COVID-19 백신 접종 자격에 해당합니까?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1037,7 +1037,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>건물 관리인은 백신 접종 자격에 해당합니까?</h4>
+            <h4>건물 관리인은 COVID-19 백신 접종 자격에 해당합니까?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
