--- a/tl/vaccines/index.html
+++ b/tl/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Bakuna</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 19, 2021 sa 12:05 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 22, 2021 sa 7:24 AM</p>
           
         </div>
       </div>
@@ -1014,7 +1014,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Ang mga masahista ba ay kwalipikado para sa Phase 1A?</h4>
+            <h4>Kwalipikado ba ang mga masahista para sa bakuna laban sa COVID-19 sa ilalim ng Phase 1A?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1037,7 +1037,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Kwalipikado ba ang mga janitor para sa bakuna?</h4>
+            <h4>Kwalipikado ba ang mga janitor para sa bakuna laban sa COVID-19 ngayon?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
