--- a/vi/vaccines/index.html
+++ b/vi/vaccines/index.html
@@ -152,7 +152,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vắc-xin</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;19 tháng 3, 2021 lúc 24:05</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 7:24</p>
           
         </div>
       </div>
@@ -990,7 +990,7 @@
                   <div class="card-body">
             <p>Nhóm đối tượng làm việc trong ngành giáo dục và chăm sóc trẻ em (theo<a href="/vi/vaccines/#Who-can-get-vaccinated-now">Giai Đoạn 1B</a>) sẽ được tiêm vắc-xin COVID-19 bao gồm:</p>
 <ul><li>Tất cả nhân viên chăm sóc trẻ chính thức và không chính thức, bao gồm nhà cung cấp dịch vụ chăm sóc trẻ ban ngày và những người sau:<ul><li>Các chương trình giải trí công cộng và tư nhân như YMCA/YWCA</li><li>Chương trình sau giờ học trong khuôn viên trường</li><li>Các cá nhân hoặc chương trình nhận trợ cấp chăm sóc trẻ em. </li><li>Không bao gồm giữ trẻ không thường xuyên </li></ul></li><li>Những nhà được gia đình chấp thuận và những nhà được chứng nhận cung cấp dịch vụ chăm sóc nuôi dưỡng khẩn cấp hoặc ngắn hạn. Mặc dù dịch vụ chăm sóc nuôi dưỡng được thực hiện tại cơ sở chăm sóc tại nhà, nhưng bản chất vẫn là tạm thời và trẻ có thể ở lại hoặc rời khỏi khi có nhu cầu chăm sóc.  </li><li>Những người làm việc trong các cơ sở Chăm Sóc Cộng Đồng Dân Cư của Trẻ </li><li>Tất cả nhân viên trong trường cao đẳng, đại học, cao đẳng cộng đồng, đại học cộng đồng, và các cơ sở giáo dục sau trung học khác</li><li>Tất cả nhân viên trong các dịch vụ hỗ trợ giáo dục và quản lý</li><li>Tất cả nhân viên trong trường mầm non, tiểu học, trung học cơ sở và trung học phổ thông</li><li>Tất cả nhân viên trong các trường kỹ thuật và thương mại</li><li>Bất kỳ nhân viên nào khác liên quan đến dịch vụ chăm sóc trẻ em và/hoặc học sinh, bao gồm tài xế và người giám sát xe buýt trường học, người dẫn trẻ qua đường, v.v.</li><li>Nhân viên thư viện do đặc thù nghề nghiệp phải tiếp xúc với học sinh</li></ul>
-<p>Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Hướng Dẫn Cập Nhật Về Tính Đủ Điều Kiện Tiêm Vắc-xin COVID-19</a> của Sở Y Tế Công Cộng California (CDPH) để biết thêm chi tiết.</p>
+<p>Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Hướng Dẫn Cập Nhật Về Tình Trạng Đủ Điều Kiện Tiêm Vắc-xin COVID-19</a> của Sở Y Tế Công Cộng California (California Department of Public Health, CDPH) để biết thêm thông tin chi tiết.</p>
 
                   </div>
                 </div>
@@ -1016,12 +1016,12 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Bác sĩ trị liệu mát-xa có đủ điều kiện cho Giai đoạn 1A không?</h4>
+            <h4>Bác sĩ trị liệu mát-xa có đủ điều kiện tiêm vắc-xin COVID-19 trong Giai Đoạn 1A không?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Có, các bác sĩ trị liệu mát-xa được cân nhắc cho <a href="/vi/vaccines/#Who-can-get-vaccinated-now">giai đoạn 1A</a> theo Người Hành Nghề Y Tế Khác.</p>
+            <p>Có, các bác sĩ trị liệu mát-xa được cân nhắc cho <a href="/vi/vaccines/#Who-can-get-vaccinated-now">Giai Đoạn 1A</a> theo Người Hành Nghề Y Tế Khác.</p>
 
                   </div>
                 </div>
@@ -1039,7 +1039,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Bảo vệ tòa nhà có đủ điều kiện tiêm vắc-xin không?</h4>
+            <h4>Bảo vệ tòa nhà hiện có đủ điều kiện tiêm vắc-xin không?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
