--- a/zh-hant/vaccines/index.html
+++ b/zh-hant/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>疫苗</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月19日, 下午12:05</p>
+            <p class="small-text">最近更新&nbsp;2021年3月22日, 上午7:24</p>
           
         </div>
       </div>
@@ -1014,7 +1014,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>按摩治療師是否符合第1A階段的資格？</h4>
+            <h4>按摩治療師是否符合第1A階段的COVID-19疫苗接種資格？</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1037,7 +1037,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>保洁員是否有資格接種疫苗？</h4>
+            <h4>保洁員目前是否有資格接種COVID-19疫苗？</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
