--- a/es/vaccines/index.html
+++ b/es/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vacunas</h1>
           
-            <p class="small-text">Última actualización&nbsp;19 de marzo de 2021 a las 12:05 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;22 de marzo de 2021 a las 7:24 a. m.</p>
           
         </div>
       </div>
@@ -1014,7 +1014,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Los masoterapeutas son elegibles para la Fase 1A?</h4>
+            <h4>¿Los masoterapeutas son elegibles para la vacuna contra la COVID-19 en la Fase 1A?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1037,7 +1037,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Los conserjes son elegibles para la vacuna?</h4>
+            <h4>¿Los conserjes son elegibles para la vacuna contra la COVID-19 ahora?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
