Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Californians at higher risk from COVID-19 are eligible for vaccination now</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">COVID-19 vaccinations in California reach 15 million</h2>
 
 
 
-<p>If you have a medical condition or disability that increases your risk of getting sick with COVID-19, or live or work in high-risk settings, you can get vaccinated now. Find out how to see if you’re eligible and make an appointment.</p>
+<p>The total number of COVID-19 vaccinations administered in California has reached 15 million. See vaccination statistics statewide and broken down by county in our Vaccine Dashboard.</p>
 
 
 
-<a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Get the details</a>
+<a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard" class="action-link pt-3 pb-3 px-4">See the numbers</a>
